<resources>
    <string name="app_name">Taliflo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stripe_key_test">pk_test_MBnCYXpbwBkIjjjpIKz6lSud</string>
    <string name="stripe_key_live">pk_live_HGECFVdMKGneyKozG9g2Fnxn</string>
    <string name="savedPrefName">TalifloSavedPreferences</string>
    <string name="savedPrefLoggedIn">loggedIn</string>
    <string name="savedPrefAuthToken">authToken</string>
    <string name="savedPrefUid">uid</string>
    <string-array name="main_tab_labels">
        <item>My Account</item>
        <item>Causes</item>
        <item>Businesses</item>
    </string-array>
    <string name="action_save">Save</string>
    <string name="action_redeemCredits">Redeem Credits</string>
    <string name="action_updateBillingInfo">Update Billing Info</string>
    <string name="action_logout">Logout</string>
    <string name="main_dummyTabTitle">Title</string>
    <string name="login_hint_email">Enter email</string>
    <string name="login_hint_password">Enter password</string>
    <string name="login_btn_login">Log In</string>
    <string name="login_btn_signUp">Sign up for Taliflo</string>
    <string name="login_btn_fb">Log in with Facebook</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="title_activity_redeem_voucher">Redeem at</string>
    <string name="action_help">Help</string>
    <string name="redeemVoucher_max">You may redeem up to</string>
    <string name="redeemVoucher_total">Total redemption amount</string>
    <string name="redeemVoucher_agreeTC">With confirmation you agree to the Terms and Conditions.</string>
    <string name="redeemVoucher_confirm">Confirm</string>
    <string name="redeemVoucher_redeemUpTo">You may redeem up to:</string>
    <string name="redeemVoucher_dummyRedeemMax">100.00</string>
    <string name="redeemVoucher_amountHint">Enter amount to redeem</string>
    <string name="redeemVoucher_dummyDate">5 December 2014</string>
    <string name="redeemVoucher_dummyBusinessName">Business A</string>
    <string name="redeemVoucher_dummyBusinessAddress">123 Address St., Vancouver, BC</string>
    <string name="dummy_value">$100.00</string>
    <string name="dummy_supported_causes">14 Supported Causes</string>
    <string name="dummy_business_name">Business Name</string>
    <string name="dummy_business_summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sollicitudin.</string>
    <string name="dummy_business_tags">#TECHNOLOGIES #SEARCH #CLOUD COMPUTING #SOFTWARE</string>
    <string name="dummy_supporters_num">3 supported causes</string>
    <string name="explore_businesses">Businesses</string>
    <string name="explore_causes">Causes</string>
    <string name="action_search">Search</string>
    <string name="search_inputHint">Find businesses and causes</string>
    <string name="history_donationTo">Donation To:</string>
    <string name="history_redemptionAt">Redemption At:</string>
    <string name="myAccount_dummyFullName">Full Name</string>
    <string name="myAccount_currentBalance">Credits</string>
    <string name="myAccount_dummyCredits">C 00.00</string>
    <string name="myAccount_transactions">Transactions</string>
    <string name="myAccount_transType">Redemption at</string>
    <string name="myAccount_trans">C -20.00</string>
    <string name="myAccount_transDate">2014-12-01</string>
    <string name="myAccount_transID">0123456789</string>
    <string name="usermenu_btnBillingInfoText">Update Billing Info</string>
    <string name="usermenu_btnLogout">Logout</string>
    <string name="title_activity_billing_info">Update Billing Info</string>
    <string name="billingInfo_nameCC">Name on Credit Card</string>
    <string name="billingInfo_numCC">Credit Card Number</string>
    <string name="billingInfo_expiryDate">Expiry Date</string>
    <string name="billingInfo_ccv">CVV</string>
    <string name="billingInfo_billingAddress">Billing Address</string>
    <string name="billingInfo_dummyExpiryDate">MM/yyyy</string>
    <string name="billingInfo_hintStreet">Steet No.</string>
    <string name="billingInfo_hintSuite">Suite</string>
    <string name="billingInfo_hintCity">City</string>
    <string name="billingInfo_hintPostalCode">Postal Code</string>
    <string name="billingInfo_btnSaveText">Save</string>
    <string name="billingInfo_dialogTitle">Are you sure?</string>
    <string name="billingInfo_dialogMsg">These changes will be reflected on your account immediately.</string>
    <string name="billingInfo_dialogBtnPosText">Yes</string>
    <string name="billingInfo_dialogBtnNegText">Cancel</string>
    <string-array name="billingInfo_countryEntries">
        <item>Canada</item>
        <item>US</item>
    </string-array>
    <string-array name="billingInfo_canadaEntries">
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
    </string-array>
    <string-array name="billingInfo_usEntries">
        <item>CA</item>
        <item>MT</item>
        <item>OR</item>
        <item>WA</item>
    </string-array>
    <string name="title_activity_user_detail">UserDetail</string>
    <string name="userDetail_btnRedeemText">Redeem $20</string>
    <string name="userDetail_btnDonateText">Donate</string>
    <string name="userDetail_availableCredit">Your Available Credit:</string>
    <string name="userDetail_dummyCredit">C 60</string>
    <string name="userDetail_btnSupportingBusinessesText">Supporting Businesses</string>
    <string name="userDetail_btnSupportedCausesText">Supported Causes</string>
    <string name="userDetail_description">Description</string>
    <string name="userDeatil_dummyDescription">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
    commodo ligula eget dolor. Aenean massa. Cum sociis natoque
        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
        Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
        aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,</string>
    <string name="userDetail_contactInfo">Contact Info</string>
    <string name="userDetail_dummyBusinessAddress">123 Address St. \nVancouver, BC\nCanada V6T 1Z4</string>
    <string name="userDetail_dummyPhone">778 778 7788</string>
    <string name="userDetail_disabledRedeemMsg">To redeem credit at our business, please donate to one of our supported causes.</string>
    <string name="title_activity_redeem">Redeem Credits</string>
    <string name="redeem_headingRedeem">Redeem</string>
    <string name="redeem_$20">$20</string>
    <string name="redeem_youAreAboutTo">You are about to redeem 20 credits (worth $20 in store credit)
    at BUSINESS NAME located at BUSINESS ADDRESS.</string>
    <string name="redeem_msg1Part1">You are about to redeem 20 credits (worth $20 in store credit)
    at</string>
    <string name="redeem_msg1Part2">located at</string>
    <string name="redeem_beSureTo">Be sure to show the business\'s staff that you are redeeming credits
     so they can apply it to your purchase immediately.</string>
    <string name="redeem_btnConfirmText">Confirm</string>
    <string name="redeem_dialogTitle">Are you sure?</string>
    <string name="redeem_dialogMsg">Your available balance will be debited this amount immediately.</string>
    <string name="redeem_dialogBtnPosText">Yes</string>
    <string name="redeem_dialogBtnNegText">Cancel</string>
    <string name="title_activity_donate">Donate</string>
    <string name="donate_headingDonate">Donate</string>
    <string name="donate_$20">$20</string>
    <string name="donate_msg1">Confirm your donation amount to</string>
    <string name="donate_donateMonthlyText">Monthly recurring donation?</string>
    <string name="donate_btnConfirmText">Confirm Donation</string>
    <string name="donate_radioBtn$20">$20</string>
    <string name="donate_radioBtn$40">$40</string>
    <string name="donate_radioBtn$60">$60</string>
    <string name="donate_radioBtn$100">$100</string>
    <string name="donate_dialogTitle">Are you sure?</string>
    <string name="donate_dialogMsg">Your credit card will be charged this amount immediately.</string>
    <string name="donate_dialogBtnPosText">Yes</string>
    <string name="donate_dialogBtnNegText">Cancel</string>
    <string name="title_activity_user_support">UserSupport</string>
    <string name="userSupport_titleSupportingBusinesses">Supporting Businesses</string>
    <string name="userSupport_titleSupportedCauses">Supported Causes</string>
    <string name="title_activity_search">Search Results</string>
    <string name="title_activity_redeem_credits">RedeemCredits</string>
    <string name="redeemCredits_noneMsg">Please donate to a cause to obtain credit. This credit can then be redeemed at the businesses that support the causes you have donated to.</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signup_hint_firstName">Enter first name</string>
    <string name="signup_hint_lastName">Enter last name</string>
    <string name="signup_hint_email">Enter email address</string>
    <string name="signup_hint_password">Enter your password</string>
    <string name="signup_btnSignup_text">Sign Up</string>
    <string name="signup_TaC_part1">By signing up, you agree to, and have read, the</string>
    <string name="signup_TaC">Terms and Conditions.</string>
    <string name="signup_password_short">Your password must be 8 characters, or more, in length</string>
    <string name="signup_successful">Signup successful. Welcome to Taliflo.</string>
    <string name="signup_failed">Signup failed. Please try again later.</string>
    <string name="title_activity_payment">Payment</string>
    <string name="payment_headeing_cardDetils">Credit Card Details</string>
    <string name="payment_hint_cardNumber">Card number</string>
    <string name="payment_hint_expiryDate">Expiry date</string>
    <string name="payment_hint_cvv">CVV number</string>
    <string name="payment_msg">We accept Visa, MasterCard, American Express, and Discovery.</string>
    <string name="payment_btnComplete_text">Complete</string>
    <string name="payment_tokenErrorMsg">Payment Error</string>
    <string name="payment_dialogBtnText">Ok</string>
    <string name="payment_emptyField">Please fill in all of the fields.</string>
    <string name="dialog_title">Are you sure?</string>
    <string name="dialog_btnPosText">Yes</string>
    <string name="dialog_btnNegText">Cancel</string>
    <string name="userAdapter_supportingBusinesses">in support</string>
    <string name="userAdapter_supportedCauses">supported</string>
    <string name="APP_ID">443781372430423</string>
    <string name="dummy_string">Text</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_login">Sign In</string>
    <string name="nav_drawer_section_default">Section</string>
    <string name="nav_banner_first">First name</string>
</resources>