<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search_tb"
        android:title="@string/action_search"
        android:showAsAction="always"
        android:orderInCategory="1"
        android:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_redeemCredits"
        android:title="@string/action_redeemCredits"
        android:orderInCategory="2"
        android:showAsAction="never" />

    <item android:id="@+id/action_updateBillingInfo"
        android:title="@string/action_updateBillingInfo"
        android:orderInCategory="3"
        android:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="4"
        android:showAsAction="never" />

</menu>