<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/lightest_grey"
    tools:context="com.taliflo.app.activities.Redeem">

    <Button
        android:id="@+id/redeem_btnConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/redeem_btnConfirmText"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg_purple"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/redeem_btnConfirm" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:text="@string/redeem_headingRedeem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/taliflo_purple"
                />

            <TextView
                android:text="@string/redeem_$20"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@color/taliflo_purple"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/redeem_msg1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/redeem_msg1Part1"
            android:textSize="18sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/redeem_companyName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_business_name"
            android:textSize="18sp"
            android:textColor="@color/taliflo_purple"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/redeem_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/redeemVoucher_dummyBusinessAddress"
            android:textSize="18sp"
            android:textColor="@color/taliflo_tiffanyBlue"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/redeem_msg2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/redeem_beSureTo"
            android:textSize="18sp"
            android:gravity="center"/>

    </LinearLayout>



</RelativeLayout>
