<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            >

            <TextView
                android:id="@+id/trans_type"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/myAccount_transType"
                android:textSize="14sp"
                android:textColor="@color/taliflo_purple"
                />

            <TextView
                android:id="@+id/trans_date"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/myAccount_transDate"
                android:textSize="14sp"
                android:textColor="@color/med_grey"
                />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            >

            <TextView
                android:id="@+id/trans_party"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/dummy_business_name"
                android:textSize="18sp"
                android:ellipsize="end"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/trans_amount"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/myAccount_trans"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/trans_id"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/med_grey"
                android:text="@string/myAccount_transID"
                />

        </TableRow>

    </TableLayout>

</LinearLayout>