<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/taliflo_purple"
    tools:context="com.taliflo.app.activities.RedeemVoucher">

    <TableLayout
        android:id="@+id/redeemVoucher_infoLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/redeemVoucher_businessName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:text="@string/redeemVoucher_dummyBusinessName"
                android:textColor="@color/taliflo_tiffanyBlue"
                />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/redeemVoucher_businessAddress"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:text="@string/redeemVoucher_dummyBusinessAddress"
                />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/redeemVoucher_redeemUpTo"
                android:textSize="18sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/redeemVoucher_redeemMax"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/redeemVoucher_dummyRedeemMax"
                android:textSize="18sp"
                android:gravity="right"
                />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_white_bg"
            android:padding="5dp"
            >

            <EditText
                android:id="@+id/redeemVoucher_enteredAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/taliflo_purple"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:hint="@string/redeemVoucher_amountHint"
                android:singleLine="true"
                />

        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/redeemVoucher_btnConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/redeemVoucher_confirm"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:background="@drawable/btn_bg"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/redeemVoucher_btnConfirm"
        android:text="@string/redeemVoucher_agreeTC"
        android:textColor="@color/white"
        android:paddingBottom="5dp"/>

</RelativeLayout>
